# UXSched

./: .gitignore  AGENTS.md  README.md  hb_integration_status.md
benchmark_results/rtx4060_latency_cdf_20260624_093034/: comparison.json  config.json
benchmark_results/rtx4060_latency_cdf_20260624_093034/alone/: latency.csv  summary.json
benchmark_results/rtx4060_latency_cdf_20260624_093034/native/: latency.csv  summary.json
benchmark_results/rtx4060_latency_cdf_20260624_093034/xsched/: latency.csv  summary.json
benchmark_results/rtx4060_latency_cdf_20260624_093823/: comparison.json  config.json
benchmark_results/rtx4060_latency_cdf_20260624_093823/alone/: latency.csv  summary.json
benchmark_results/rtx4060_latency_cdf_20260624_093823/native/: latency.csv  summary.json
benchmark_results/rtx4060_latency_cdf_20260624_094848/: comparison.json  config.json
benchmark_results/rtx4060_resnet_preempt_20260624_084400/: config.json  summary.json  throughput.csv
benchmark_results/rtx4060_resnet_preempt_20260624_084949/: config.json
benchmark_results/rtx4060_resnet_preempt_20260624_085017/: config.json
benchmarks/: priority_preemption_throughput.py  realtime_inference_latency.py
benchmarks/cutlass/: CMakeLists.txt  cutlass_launch_probe.cu  verified_kernel_sm120_fp32_simt.txt
docs/: bubble_aware_mvp.md  codex_handoff.md  cutlass_realtime_benchmark_plan.md  hummingbird_backend_results.md  hummingbird_runtime_architecture.md  hummingbird_runtime_results.md  hummingbird_runtime_test_plan.md
include/: xsched.py
include/xsched/: types.h
protocol/src/: names.cpp
tools/: bubble_aware_mvp_selftest.cpp  build_cutlass_launch_probe.sh  check_bubble_aware_gpu_smoke.py  check_bubble_aware_mvp_log.py  hb_xqueue_probe.cpp  plot_cutlass_realtime_results.py  plot_cutlass_split_size_sweep.py  run_bubble_aware_gpu_smoke.sh  run_bubble_aware_mvp_selftest.sh  run_cutlass_launch_probe.sh  run_cutlass_realtime_compare.sh  run_hb_gate1_smoke.sh  summarize_cutlass_realtime_compare.py
参赛文档输出/: evidence_map.md  figure_manifest.csv  split52_formula_verification.md
(+26 files in other folders)
